--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@ function calculateMarriage() {
   }
 
   if (ageInYears < 18) {
-    document.getElementById('marriageResult').innerText = 'দেখো তুমি এখনো পিচ্চি আছো, আগে বড় হও তার পর নিয়ের চিন্তা কইরো';
+    document.getElementById('marriageResult').innerText = 'দেখো তুমি এখনো পিচ্চি আছো, আগে বড় হও তার পর বিয়ে চিন্তা কইরো';
     return;
   }
 
